# vigilia-hackathon2026an

./: .env.example  .gitignore  CONTRIBUTING.md  DECISIONS.md  README.md  pyproject.toml  run.py
.github/: ci.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bloc-de-travail.md
docs/: api-albert.md  api-grist.md  api-tchap-maubot.md  api-tricoteuse.md  architecture.md  dashboards.md  documentation-tableau-de-bord-grist.md  organisation.md  synthese-desgin.md
hackathon-an-2026/: DEFI.md
hackathon-an-2026/docs/: api-grist.md  api-tchap-maubot.md  api-tricoteuses.md  architecture.md  dashboards.md
issues/: ISSUES.md  issues.csv
notebooks/V2_tricoteuse/: 01_test_fecth_api.py  02_test_fonction_cleaning.py  03_test_grist.py  04_test_veille  04_test_veille.py  05_test_export.py  test_pipeline_complete.ipynb
notebooks/V2_tricoteuse/archive/: 01_load_data.py  02-01_filter_func.py  02_filter_test_json.py
src/B1/: pipeline_amendements.py  pipeline_complete.py  pipeline_veilles.py  pipeline_veilles_v2.py
src/archive/: clean.py  match_lexical.py  match_meta.py
src/b2_llm/: compute_stats_veille.py
src/b4/: synthese.py  synthese_b4.md
src/run/: pipeline_amendements.py
src/veille/: __init__.py  config.py  digest.py  fetch.py  fetch_api.py  fetch_api_v2.py  filter_user.py  grist.py  match_semantique.py
tests/: test_clean.py  test_fetch_api.py  test_fetch_api.v2.py
tests/test_b4/: test_synthese.py
