[project]
name = "veille-parlementaire"
version = "0.1.0"
description = "Veille parlementaire ciblée sur les travaux de l'Assemblée nationale, construite sur les briques souveraines de l'État (Grist, Albert API, Tchap)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
tchap = [
    "simplematrixbotlib>=2.10",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veille"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "EM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
